<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:minHeight="300dp"
    android:minWidth="400dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:text="@string/barcode_information_title"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:text="@string/product_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/brand_value"/>

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/size_value" />

</LinearLayout>